--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
     },
     "require": {
         "silex/silex": "2.0.*",
-        "sorien/silex-pimple-dumper": "~1.0"
+        "sorien/silex-pimple-dumper": "~1.0",
+        "symfony/config": "3.1.*",
+        "symfony/yaml": "3.1.*",
+        "symfony/translation": "3.1.*"
     }
 }
