--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "sorien/silex-pimple-dumper": "~1.0",
         "symfony/config": "3.1.*",
         "symfony/yaml": "3.1.*",
-        "symfony/translation": "3.1.*"
+        "symfony/translation": "3.1.*",
+        "doctrine/dbal": "2.5.*"
     }
 }
