--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "silex/silex": "2.0.*",
         "sorien/silex-pimple-dumper": "~1.0",
         "symfony/config": "3.1.*",
+        "symfony/security": "3.1.*",
         "symfony/yaml": "3.1.*",
         "symfony/translation": "3.1.*",
         "doctrine/dbal": "2.5.*"
