Use SQLite as DB for tests Add authentication tests

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
             "Wtd\\": [
                 "app",
                 "app/controllers"
+            ],
+            "Wtd\\Test\\": [
+                "test"
             ]
         }
     },
