--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,8 @@
         "symfony/yaml": "3.1.*",
         "symfony/translation": "3.1.*",
         "doctrine/dbal": "2.5.*",
+        "doctrine/orm": "2.5.*",
+        "doctrine/doctrine-bundle": "1.6.*",
         "phpunit/phpunit": "5.3.*",
         "phpunit/php-code-coverage": "3.3.*"
     }
