Always se entity manager instead of PDO query exec Share entity manager among test suites Add tests for missing collection creation tests Treat timestamps as integers Pass client version number in non-internal calls Cleanup

--- a/app/config/config.test.ini
+++ b/app/config/config.test.ini
@@ -1,7 +1,8 @@
 [db]
 username=dm_db_test
 password=dm_db_test
-path=/test/db.sqlite
+type=sqlite
+in_memory=true
 
 [user_roles]
 whattheduck=ROLE_COLLECTION:dm_test
