Add COA-specific connection entity manager with base models

--- a/app/config/config.base.ini
+++ b/app/config/config.base.ini
@@ -4,5 +4,12 @@ password=pass
 dbname=dm_test
 type=mysql
 
+[db_coa]
+username=user
+password=pass
+dbname=coa
+type=mysql
+tables=~^(inducks_publication|inducks_country)$~
+
 [user_roles]
 whattheduck=ROLE_COLLECTION:pass
