--- a/app/config/config.test.ini
+++ b/app/config/config.test.ini
@@ -4,5 +4,12 @@ password=dm_db_test
 type=sqlite
 in_memory=true
 
+[db_coa]
+username=dm_db_test
+password=dm_db_test
+type=sqlite
+tables=~^(inducks_publication|inducks_country)$~
+in_memory=true
+
 [user_roles]
 whattheduck=ROLE_COLLECTION:dm_test
