Move COA data fetch logic from internal endpoint to public endpoint Add test assertions for collection fetching

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "psr-4": {
             "Wtd\\": [
                 "app",
-                "app/controllers"
+                "app/controllers",
+                "app/helpers"
             ],
             "Wtd\\Test\\": [
                 "test"
