Add model for inducks_issue Add method to fetch the issues of a publication

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
     },
     "autoload": {
         "psr-4": {
+            "Coa\\Models\\": [
+                "app/models/Coa/Models"
+            ],
             "Wtd\\": [
                 "app",
                 "app/controllers",
