--- a/app/config/schemas.ini
+++ b/app/config/schemas.ini
@@ -3,7 +3,7 @@ models_path=Wtd/Models
 
 [db_coa]
 models_path=Coa/Models
-tables="(inducks_publication|inducks_countryname)"
+tables="(inducks_publication|inducks_countryname|inducks_issue)"
 
 [user_roles]
 whattheduck=ROLE_COLLECTION:pass
