Scale Entity Manager handling

--- a/app/config/schemas.ini
+++ b/app/config/schemas.ini
@@ -1,6 +1,8 @@
 [db]
 models_path=Wtd/Models
+models_namespace=Wtd\\Models\\
 
 [db_coa]
 models_path=Coa/Models
+models_namespace=Coa\\Models\\
 tables="(inducks_publication|inducks_countryname|inducks_issue)"
