Add duck-cover-id model

--- a/app/config/schemas.ini
+++ b/app/config/schemas.ini
@@ -1,8 +1,12 @@
 [db]
 models_path=Wtd/Models
-models_namespace=Wtd\\Models\\
+models_namespace=Wtd\Models
 
 [db_coa]
 models_path=Coa/Models
-models_namespace=Coa\\Models\\
+models_namespace=Coa\Models
 tables="(inducks_publication|inducks_countryname|inducks_issue)"
+
+[db_cover_id]
+models_path=CoverId/Models
+models_namespace=CoverId\Models
