Add service to retrieve image similarities based on upload picture

--- a/app/config/config.db.test.ini
+++ b/app/config/config.db.test.ini
@@ -9,3 +9,9 @@ username=dm_db_test
 password=dm_db_test
 type=sqlite
 in_memory=true
+
+[db_cover_id]
+username=dm_db_test
+password=dm_db_test
+type=sqlite
+in_memory=true
