Complete similar image search service with tests

--- a/app/config/config.db.ini
+++ b/app/config/config.db.ini
@@ -9,3 +9,9 @@ username=root
 password=root
 dbname=coa
 type=mysql
+
+[db_cover_id]
+username=root
+password=changeme
+dbname=cover_info
+type=mysql
