--- a/app/config/config.db.base.ini
+++ b/app/config/config.db.base.ini
@@ -1,11 +1,20 @@
 [db]
+port=3306
 username=user
 password=pass
 dbname=dm_test
 type=mysql
 
 [db_coa]
+port=3306
 username=user
 password=pass
 dbname=coa
+type=mysql
+
+[db_cover_id]
+port=3306
+username=root
+password=changeme
+dbname=cover_info
 type=mysql
