Add host in DB config files

--- a/app/config/config.db.base.ini
+++ b/app/config/config.db.base.ini
@@ -1,4 +1,5 @@
 [db]
+host=localhost
 port=3306
 username=user
 password=pass
@@ -6,6 +7,7 @@ dbname=dm_test
 type=mysql
 
 [db_coa]
+host=localhost
 port=3306
 username=user
 password=pass
@@ -13,6 +15,7 @@ dbname=coa
 type=mysql
 
 [db_cover_id]
+host=localhost
 port=3306
 username=root
 password=changeme
