--- a/app/config/schemas.ini
+++ b/app/config/schemas.ini
@@ -1,6 +1,6 @@
 [db]
-models_path=Wtd/Models
-models_namespace=Wtd\Models
+models_path=Dm/Models
+models_namespace=Dm\Models
 
 [db_coa]
 models_path=Coa/Models
