Check connection to all the databases in the status endpoint

--- a/app/config/config.db.base.ini
+++ b/app/config/config.db.base.ini
@@ -21,3 +21,11 @@ username=root
 password=changeme
 dbname=cover_info
 type=mysql
+
+[db_dm_stats]
+host=localhost
+port=3306
+username=root
+password=changeme
+dbname=dm_stats
+type=mysql
