--- a/app/config/config.db.ini
+++ b/app/config/config.db.ini
@@ -1,17 +1,31 @@
 [db]
+host=mariadb-server-for-dm
+port=3306
 username=root
-password=root
-dbname=dm_test
+password=changeme
+dbname=dm
 type=mysql
 
 [db_coa]
+host=coa-box-1
+port=3306
 username=root
-password=root
+password=changeme
 dbname=coa
 type=mysql
 
 [db_cover_id]
+host=duck-cover-id-box-2
+port=3306
 username=root
 password=changeme
 dbname=cover_info
+type=mysql
+
+[db_dm_stats]
+host=dm-stats-1
+port=3306
+username=root
+password=changeme
+dbname=dm_stats
 type=mysql
