Add DM stats models

--- a/app/config/schemas.ini
+++ b/app/config/schemas.ini
@@ -10,3 +10,7 @@ tables="(inducks_publication|inducks_countryname|inducks_issue)"
 [db_cover_id]
 models_path=CoverId/Models
 models_namespace=CoverId\Models
+
+[db_dm_stats]
+models_path=DmStats/Models
+models_namespace=DmStats\Models
