Add missing DM configuration for tests

--- a/app/config/config.db.test.ini
+++ b/app/config/config.db.test.ini
@@ -15,3 +15,9 @@ username=dm_db_test
 password=dm_db_test
 type=sqlite
 in_memory=true
+
+[db_dm_stats]
+username=dm_db_test
+password=dm_db_test
+type=sqlite
+in_memory=true
