--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
     },
     "require": {
         "silex/silex": "2.0.*",
-        "sorien/silex-pimple-dumper": "~2.0",
+        "sorien/silex-pimple-dumper": "2.0.*",
         "symfony/browser-kit": "3.1.*",
         "symfony/config": "3.1.*",
         "symfony/security": "3.1.*",
