--- a/app/config/schemas.ini
+++ b/app/config/schemas.ini
@@ -5,7 +5,7 @@ models_namespace=Dm\Models
 [db_coa]
 models_path=Coa/Models
 models_namespace=Coa\Models
-tables="(inducks_publication|inducks_person|inducks_countryname|inducks_issue)"
+tables="(inducks_publication|inducks_person|inducks_countryname|inducks_issue|inducks_story)"
 
 [db_cover_id]
 models_path=CoverId/Models
