More consistent default DB config

--- a/app/config/config.db.base.ini
+++ b/app/config/config.db.base.ini
@@ -1,21 +1,21 @@
 [db]
-host=localhost
+host=dm-db
 port=3306
-username=user
-password=pass
-dbname=dm_test
+username=root
+password=changeme
+dbname=dm
 type=mysql
 
 [db_coa]
-host=localhost
+host=coa-db
 port=3306
-username=user
-password=pass
+username=root
+password=changeme
 dbname=coa
 type=mysql
 
 [db_cover_id]
-host=localhost
+host=cover-id-db
 port=3306
 username=root
 password=changeme
@@ -23,7 +23,7 @@ dbname=cover_info
 type=mysql
 
 [db_dm_stats]
-host=localhost
+host=dm-stats-db
 port=3306
 username=root
 password=changeme
