--- a/composer.json
+++ b/composer.json
@@ -35,9 +35,32 @@
             "DmStats\\Models\\": [
                 "app/models/DmStats/Models"
             ],
+            "DmServer\\Controllers\\": [
+                "app/controllers"
+            ],
+            "DmServer\\Controllers\\Coa\\": [
+                "app/controllers/coa"
+            ],
+            "DmServer\\Controllers\\Collection\\": [
+                "app/controllers/collection"
+            ],
+            "DmServer\\Controllers\\CoverId\\": [
+                "app/controllers/coverid"
+            ],
+            "DmServer\\Controllers\\RawSql\\": [
+                "app/controllers/rawsql"
+            ],
+            "DmServer\\Controllers\\Stats\\": [
+                "app/controllers/stats"
+            ],
+            "DmServer\\Controllers\\Status\\": [
+                "app/controllers/status"
+            ],
+            "DmServer\\Controllers\\User\\": [
+                "app/controllers/user"
+            ],
             "DmServer\\": [
                 "app",
-                "app/controllers",
                 "app/helpers"
             ],
             "DmServer\\Test\\": [
