Create demo user reset service : issue and bookcase options reset + issue re-creation

--- a/app/config/roles.base.ini
+++ b/app/config/roles.base.ini
@@ -1,4 +1,5 @@
-ducksmanager=ROLE_COLLECTION:pass
-whattheduck=ROLE_COLLECTION:pass
-rawsql=ROLE_RAWSQL:pass
+ducksmanager=ROLE_COLLECTION:ducksmanagerpass
+whattheduck=ROLE_COLLECTION:whattheduckpass
+rawsql=ROLE_RAWSQL:rawsqlpass
+admin=ROLE_ADMIN:adminpass
 dm_test=ROLE_COLLECTION:test
