Add EdgeCreator entity manager and config

--- a/app/config/config.db.test.ini
+++ b/app/config/config.db.test.ini
@@ -23,3 +23,9 @@ username=dm_db_test
 password=dm_db_test
 type=sqlite
 in_memory=true
+
+[db_edgecreator]
+username=dm_db_test
+password=dm_db_test
+type=sqlite
+in_memory=true
