--- a/app/config/schemas.ini
+++ b/app/config/schemas.ini
@@ -14,3 +14,7 @@ models_namespace=CoverId\Models
 [db_dm_stats]
 models_path=DmStats/Models
 models_namespace=DmStats\Models
+
+[db_edgecreator]
+models_path=EdgeCreator/Models
+models_namespace=EdgeCreator\Models
