--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,12 @@
             "DmStats\\Models\\": [
                 "app/models/DmStats/Models"
             ],
+            "EdgeCreator\\Contracts\\": [
+                "app/models/EdgeCreator/Contracts"
+            ],
+            "EdgeCreator\\Models\\": [
+                "app/models/EdgeCreator/Models"
+            ],
             "DmServer\\Controllers\\": [
                 "app/controllers"
             ],
