Shorten error page in debug mode Add EdgeCreator service and test to add a step to a model

--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,9 @@
             "DmServer\\Controllers\\RawSql\\": [
                 "app/controllers/rawsql"
             ],
+            "DmServer\\Controllers\\EdgeCreator\\": [
+                "app/controllers/edgecreator"
+            ],
             "DmServer\\Controllers\\Stats\\": [
                 "app/controllers/stats"
             ],
