Add role for EdgeCreator

--- a/app/config/roles.base.ini
+++ b/app/config/roles.base.ini
@@ -1,4 +1,5 @@
 ducksmanager=ROLE_COLLECTION:ducksmanagerpass
+edgecreator=ROLE_COLLECTION:edgecreatorpass
 whattheduck=ROLE_COLLECTION:whattheduckpass
 rawsql=ROLE_RAWSQL:rawsqlpass
 admin=ROLE_ADMIN:adminpass
