Add service and test to load a model

--- a/composer.json
+++ b/composer.json
@@ -86,6 +86,7 @@
         "symfony/browser-kit": "3.1.*",
         "symfony/config": "3.1.*",
         "symfony/security": "3.1.*",
+        "symfony/serializer": "3.2.*",
         "symfony/yaml": "3.1.*",
         "symfony/translation": "3.1.*",
         "doctrine/dbal": "2.5.*",
