--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
      - .:/var/www/html/dm-server
   db_coa:
-    container_name: db_coa
+    container_name: mariadb-server-for-coa-box
     image: "bperel/coa-box"
     extends:
       file: docker-compose-db-with-healthcheck.yml
@@ -25,7 +25,7 @@ services:
       MYSQL_ROOT_PASSWORD: changeme
       MYSQL_DATABASE: coa
   db_cover_id:
-    container_name: db_cover_id
+    container_name: mariadb-server-for-cover-info-box
     extends:
       file: docker-compose-db-with-healthcheck.yml
       service: db-with-healthcheck
@@ -35,7 +35,7 @@ services:
       MYSQL_ROOT_PASSWORD: changeme
       MYSQL_DATABASE: cover_info
   db_dm:
-    container_name: db_dm
+    container_name: mariadb-server-for-dm
     extends:
       file: docker-compose-db-with-healthcheck.yml
       service: db-with-healthcheck
@@ -55,7 +55,7 @@ services:
       MYSQL_ROOT_PASSWORD: changeme
       MYSQL_DATABASE: edgecreator
   db_dm_stats:
-    container_name: db_dm_stats
+    container_name: mariadb-server-for-dm-stats
     extends:
       file: docker-compose-db-with-healthcheck.yml
       service: db-with-healthcheck
@@ -64,6 +64,11 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: changeme
       MYSQL_DATABASE: dm_stats
+  pastec:
+    container_name: pastec-ubuntu-1704-timestamps
+    image: "bperel/pastec-ubuntu-1704-timestamps"
+    ports:
+     - "4212:4212"
 networks:
   default:
     external:
