Cleanup Add roave/security-advisories dependency

--- a/composer.json
+++ b/composer.json
@@ -103,6 +103,7 @@
         "monolog/monolog": "1.23.*",
         "gedmo/doctrine-extensions": "2.4.*",
         "phpunit/phpunit": "6.2.*",
-        "phpunit/php-code-coverage": "5.2.*"
+        "phpunit/php-code-coverage": "5.2.*",
+        "roave/security-advisories": "dev-master"
     }
 }
