--- a/composer.json
+++ b/composer.json
@@ -104,6 +104,7 @@
         "gedmo/doctrine-extensions": "2.4.*",
         "phpunit/phpunit": "6.2.*",
         "phpunit/php-code-coverage": "5.2.*",
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "radebatz/silex2swagger": "3.0.*"
     }
 }
