--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
     image: "bperel/pastec-ubuntu-1704-timestamps"
     ports:
      - "4212:4212"
+    restart: always
 networks:
   default:
     external:
