--- a/app/config/settings.base.ini
+++ b/app/config/settings.base.ini
@@ -1,5 +1,5 @@
 image_local_root=/tmp/dm-server/
-image_remote_root=/tmp/dm-server/remote/
+image_remote_root=http://outducks.org/
 pastec_host=pastec3
 pastec_port=4212
 smtp_host=localhost
