--- a/composer.json
+++ b/composer.json
@@ -102,6 +102,7 @@
         "doctrine/doctrine-bundle": "1.6.*",
         "monolog/monolog": "1.23.*",
         "gedmo/doctrine-extensions": "2.4.*",
+        "swiftmailer/swiftmailer": "6.0.*",
         "phpunit/phpunit": "6.4.*",
         "phpunit/php-code-coverage": "5.2.*",
         "roave/security-advisories": "dev-master"
