Add test for the case where no main photo exists for an edge Add test for invalid e-mail when notifying of a new edge photo sent

--- a/app/config/settings.test.ini
+++ b/app/config/settings.test.ini
@@ -4,5 +4,5 @@ pastec_host=pastec3
 pastec_port=4212
 smtp_host=localhost
 smtp_password=pass
-smtp_username=user
-smtp_origin_email_domain=localhost-origin
+smtp_username=user@ducksmanager.net
+smtp_origin_email_domain=localhost
