--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -11,11 +11,13 @@ COPY composer.json /var/www/html/dm-server/composer.json
 
 RUN a2enmod rewrite
 
-RUN apt-get update && apt-get install -y git wget unzip mariadb-client
+RUN apt-get update && apt-get install -y git wget unzip mariadb-client nano ssmtp
 
-RUN pecl install xdebug-2.5.0
+RUN echo 'sendmail_path = "/usr/sbin/ssmtp -t"' > /usr/local/etc/php/conf.d/mail.ini
 
-RUN docker-php-ext-install pdo pdo_mysql opcache && docker-php-ext-enable xdebug
+RUN pecl install xdebug-2.5.5
+
+RUN docker-php-ext-install -j$(nproc) pdo pdo_mysql opcache && docker-php-ext-enable xdebug
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
