--- a/composer.json
+++ b/composer.json
@@ -103,8 +103,10 @@
         "monolog/monolog": "1.23.*",
         "gedmo/doctrine-extensions": "2.4.*",
         "swiftmailer/swiftmailer": "6.0.*",
-        "phpunit/phpunit": "6.4.*",
-        "phpunit/php-code-coverage": "5.2.*",
         "roave/security-advisories": "dev-master"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "6.4.*",
+        "phpunit/php-code-coverage": "5.2.*"
     }
 }
