--- a/composer.json
+++ b/composer.json
@@ -55,8 +55,8 @@
             "DmServer\\Controllers\\Collection\\": [
                 "app/controllers/collection"
             ],
-            "DmServer\\Controllers\\CoverId\\": [
-                "app/controllers/coverid"
+            "DmServer\\Controllers\\Coverid\\": [
+                "app/controllers/Coverid"
             ],
             "DmServer\\Controllers\\DucksManager\\": [
                 "app/controllers/ducksmanager"
