--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
             "Coa\\Models\\": [
                 "app/models/Coa/Models"
             ],
-            "CoverId\\Models\\": [
-                "app/models/CoverId/Models"
+            "Coverid\\Models\\": [
+                "app/models/Coverid/Models"
             ],
-            "CoverId\\Contracts\\": [
-                "app/models/CoverId/Contracts"
+            "Coverid\\Contracts\\": [
+                "app/models/Coverid/Contracts"
             ],
             "Dm\\Contracts\\": [
                 "app/models/Dm/Contracts"
@@ -53,7 +53,7 @@
                 "app/controllers/Coa"
             ],
             "DmServer\\Controllers\\Collection\\": [
-                "app/controllers/collection"
+                "app/controllers/Collection"
             ],
             "DmServer\\Controllers\\Coverid\\": [
                 "app/controllers/Coverid"
