Add tests to retrieve swagger.json

--- a/app/config/settings.test.ini
+++ b/app/config/settings.test.ini
@@ -6,3 +6,4 @@ smtp_host=localhost
 smtp_password=pass
 smtp_username=user@ducksmanager.net
 smtp_origin_email_domain=localhost
+swagger_path=/var/www/html/dm-server/test/fixtures/swagger.json
