--- a/composer.json
+++ b/composer.json
@@ -103,6 +103,7 @@
         "monolog/monolog": "1.23.*",
         "gedmo/doctrine-extensions": "2.4.*",
         "swiftmailer/swiftmailer": "6.0.*",
+        "jdesrosiers/silex-cors-provider": "~1.0",
         "roave/security-advisories": "dev-master",
         "radebatz/silex2swagger": "dev-controller_shared_parameter#759daf7b1d976504e7c2433c93db6b0f2109cddd"
     },
