Use Silex2Swagger annotations for the Rawsql namespace

--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
                 "app/controllers/Ducksmanager"
             ],
             "DmServer\\Controllers\\RawSql\\": [
-                "app/controllers/rawsql"
+                "app/controllers/Rawsql"
             ],
             "DmServer\\Controllers\\Edgecreator\\": [
                 "app/controllers/Edgecreator"
