--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,7 @@
                 "app/controllers/Stats"
             ],
             "DmServer\\Controllers\\Status\\": [
-                "app/controllers/status"
+                "app/controllers/Status"
             ],
             "DmServer\\Controllers\\User\\": [
                 "app/controllers/user"
