Use Silex2Swagger annotations for the User namespace

--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,7 @@
                 "app/controllers/Status"
             ],
             "DmServer\\Controllers\\User\\": [
-                "app/controllers/user"
+                "app/controllers/User"
             ],
             "DmServer\\": [
                 "app",
