ucfirst for model directories

--- a/app/config/schemas.ini
+++ b/app/config/schemas.ini
@@ -7,13 +7,13 @@ models_path=Coa/Models
 models_namespace=Coa\Models
 
 [db_cover_id]
-models_path=CoverId/Models
-models_namespace=CoverId\Models
+models_path=Coverid/Models
+models_namespace=Coverid\Models
 
 [db_dm_stats]
-models_path=DmStats/Models
-models_namespace=DmStats\Models
+models_path=Stats/Models
+models_namespace=Stats\Models
 
 [db_edgecreator]
-models_path=EdgeCreator/Models
-models_namespace=EdgeCreator\Models
+models_path=Edgecreator/Models
+models_namespace=Edgecreator\Models
