--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
             "Coa\\Models\\": [
                 "app/models/Coa/Models"
             ],
-            "CoverId\\Models\\": [
-                "app/models/CoverId/Models"
+            "Coverid\\Models\\": [
+                "app/models/Coverid/Models"
             ],
-            "CoverId\\Contracts\\": [
-                "app/models/CoverId/Contracts"
+            "Coverid\\Contracts\\": [
+                "app/models/Coverid/Contracts"
             ],
             "Dm\\Contracts\\": [
                 "app/models/Dm/Contracts"
@@ -34,14 +34,14 @@
             "Dm\\Models\\": [
                 "app/models/Dm/Models"
             ],
-            "DmStats\\Contracts\\": [
-                "app/models/DmStats/Contracts"
+            "Stats\\Contracts\\": [
+                "app/models/Stats/Contracts"
             ],
-            "DmStats\\Models\\": [
-                "app/models/DmStats/Models"
+            "Stats\\Models\\": [
+                "app/models/Stats/Models"
             ],
-            "EdgeCreator\\Models\\": [
-                "app/models/EdgeCreator/Models"
+            "Edgecreator\\Models\\": [
+                "app/models/Edgecreator/Models"
             ],
             "Generic\\Contracts\\Results\\": [
                 "app/models"
@@ -55,7 +55,7 @@
             "DmServer\\Controllers\\Collection\\": [
                 "app/controllers/Collection"
             ],
-            "DmServer\\Controllers\\CoverId\\": [
+            "DmServer\\Controllers\\Coverid\\": [
                 "app/controllers/Coverid"
             ],
             "DmServer\\Controllers\\DucksManager\\": [
@@ -64,7 +64,7 @@
             "DmServer\\Controllers\\RawSql\\": [
                 "app/controllers/Rawsql"
             ],
-            "DmServer\\Controllers\\EdgeCreator\\": [
+            "DmServer\\Controllers\\Edgecreator\\": [
                 "app/controllers/Edgecreator"
             ],
             "DmServer\\Controllers\\Edges\\": [
