--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,7 +89,7 @@ services:
     ports:
      - "8081:8080"
     environment:
-      API_URL: http://localhost:8001/dm-server/status/swagger.json
+      API_URL: http://${DMSERVER_HOST}:8001/dm-server/status/swagger.json
       SWAGGER_JSON: http://dm-server/dm-server/status/swagger.json
 networks:
   default:
