Refactory row check query Ignore inducks_characterurl table

--- a/app/config/schemas.ini
+++ b/app/config/schemas.ini
@@ -5,6 +5,7 @@ models_namespace=Dm\Models
 [db_coa]
 models_path=Coa/Models
 models_namespace=Coa\Models
+tables="((?!inducks_characterurl).)+"
 
 [db_cover_id]
 models_path=Coverid/Models
