--- a/php.xdebug.ini
+++ b/php.xdebug.ini
@@ -1,3 +1,4 @@
-xdebug.remote_enable = off
-xdebug.coverage_enable=1
+xdebug.remote_enable = 1
+xdebug.coverage_enable=0
+xdebug.profiler_enable=1
 memory_limit = 512M
