Enable gzip compression

--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,5 @@ RewriteCond %{HTTP:Authorization} ^(.+)$
 RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [QSA,L]
+
+AddOutputFilterByType DEFLATE text/html text/plain application/json
